@@ -1,3 +1,8 @@
+2006-11-09  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/src/rinterface.c (R_igraph_spinglass_my_community) :
+	return more data: cohesion, adhesion, inner & outer links
+
 2006-11-07  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/community.R (spinglass.community) :
